Fix some layout issues

--- a/app/css/imageProcessing.css
+++ b/app/css/imageProcessing.css
@@ -26,7 +26,7 @@
 	box-shadow: 0px 0px 3px 1px #F8A102;
 	border-radius: 3px;
 	padding: 3px;
-	border: 0;
+	border: 1px solid transparent;
 	background-color: transparent;
 	color: #F6931F;
 	font-weight: bold;
