--- a/app/css/layerManager.css
+++ b/app/css/layerManager.css
@@ -6,6 +6,11 @@
 	height: 200px;
 }
 
+#backgroundLayersSelect-menu
+{
+	height: 200px;
+}
+
 #backgroundLayers fieldset
 {
 	border: none;
