--- a/app/css/serviceBar.css
+++ b/app/css/serviceBar.css
@@ -283,3 +283,17 @@
 	border: 0px;
 	height: 1px;
 }
+
+/*** zScale ***/
+
+#zScale
+{
+	display: none;
+	margin-top: 5px;
+	font-size: 1.1em;
+	position: relative;
+	top: 15px;
+	padding: 15px;
+	border-radius:6px;
+	box-shadow: 0px 0px 15px rgb(240, 240, 240), inset 0 1px 2px rgba(0, 0, 0, 0.08);
+}
